Update Python2 .ipynb

--- a/Python2 .ipynb
+++ b/Python2 .ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#    Python Session 3 :\n",
-    "                Shashank Shawak\n"
+    "#    Python Session 2 :\n",
+    "                Shashank \n"
    ]
   },
   {
