--- a/nifty-fifty-datascienceproject.ipynb
+++ b/nifty-fifty-datascienceproject.ipynb
@@ -120,7 +120,7 @@
     "elif datetime.now().strftime('%A')=='Sunday': \n",
     "    modified_date = date + timedelta(days=-2)\n",
     "else:\n",
-    "    modified_date=s\n",
+    "    modified_date=datetime.now()\n",
     "correct_date=datetime.strftime(modified_date, \"%d%m%Y\")\n",
     "\n",
     "def data_Downloader(url,filename):\n",
